--- a/icon_2/icon_2.html
+++ b/icon_2/icon_2.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-        
+        <div class="wrapper>
         <a href="http://facebook.com" class="icon facebook">
             <i class="fa-brands fa-facebook"></i>
         </a>
@@ -26,7 +26,6 @@
         <a href="http://youtube.com" class="icon youtube">
             <i class="fa-brands fa-youtube"></i>
         </a>
-    </div>
-    
+        <div>
 </body>
 </html>
